--- a/css/index.css
+++ b/css/index.css
@@ -1,17 +1,40 @@
+@media screen and  (max-width:320px){
+     html{
+        font-size: 42.6px;
+        background-color: yellow;
+     }
+  }
+@media screen and  (min-width:320px){
+     html{
+        font-size: 42.6px;
+        background-color: red;
+     }
+  }
+@media screen and (min-width:375px){
+     html{
+        font-size: 50px;
+        background-color: black;
+  }
+@media screen and  (max-width:750px){
+     html{
+        font-size: 100px;
+        background-color: rgb(0, 255, 55);
+     }
+  }
 .box{
-    width: 500px;
+    width: 5rem;
     /* height: 500px; */
     border: 1px solid red;
     display: flex;
     /* overflow: hidden; */
 }
 .smalbox1{
-    width: 100px;
-    height: 400px;
+    width: 1rem;
+    height: 4rem;
     background-color: blue;
 }
 .smalbox2{
-    flex-grow: 0.8;
-    height: 300px;
+    flex: 1;
+    height: 3rem;
     background-color: green;
 }
