--- a/css/index.css
+++ b/css/index.css
@@ -1,26 +1,35 @@
-@media screen and  (max-width:320px){
+/* @media screen and  (max-width:320px){
      html{
         font-size: 42.6px;
         background-color: yellow;
      }
-  }
-@media screen and  (min-width:320px){
+  } */
+  @media screen and  (min-width:750px){
+    html{
+       font-size: 100px;
+       background-color: rgb(160, 172, 163);
+    }
+ }
+  @media screen and  (max-width:750px){
+    html{
+       font-size: 100px;
+       background-color: rgb(0, 255, 55);
+    }
+ }
+ @media screen and (max-width:375px){
+    html{
+       font-size: 50px;
+       background-color: black;
+ }
+}
+@media screen and  (max-width:320px){
      html{
         font-size: 42.6px;
         background-color: red;
      }
   }
-@media screen and (min-width:375px){
-     html{
-        font-size: 50px;
-        background-color: black;
-  }
-@media screen and  (max-width:750px){
-     html{
-        font-size: 100px;
-        background-color: rgb(0, 255, 55);
-     }
-  }
+
+
 .box{
     width: 5rem;
     /* height: 500px; */
