--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,10 @@
-
-
-  @media screen and  (max-width:750px){
+ @media screen and  (min-width:750px){
+    html{
+       font-size: 150px;
+       background-color: yellow;
+    }
+   }
+ @media screen and  (max-width:750px){
     html{
        font-size: 100px;
        background-color: rgb(0, 255, 55);
