--- a/css/index.css
+++ b/css/index.css
@@ -41,3 +41,9 @@
     height: 3rem;
     background-color: green;
 }
+.smalbox3{
+   flex: 0.5;
+   height: 2rem;
+   background-color: orange;
+   
+}
